implemented plugin system

--- a/buteo.cfg
+++ b/buteo.cfg
@@ -1,9 +1,13 @@
 # Configuration file for Buteo
 
+# Enabled plugins
+# supplied default plugins: network vnstat 
+plugins = network
+
 # Authentication
 # List all users to grant authentication at auth_users and list
 # the relevant passwords in the same order at auth_passwd.
-# Both users and passwords are separated by comma.
+# Both users and passwords are separated by spaces.
 #auth = 1
 #auth_users = admin
 #auth_passwd = changeme
@@ -20,11 +24,7 @@ template = default
 # Refresh interval in seconds
 #refresh_interval = 2
 
-# Display network interfaces information
-network = 1
-
 # vnStat
-# List all vnstat interfaces to be displayed at vnstat_ifaces (separated by comma).
+# List all vnstat interfaces to be displayed at vnstat_ifaces (separated by spaces).
 # If vnstat_ifaces is left blank, only the default vnStat interface will be displayed. 
-#vnstat = 1
 #vnstat_ifaces =
