moved memory and filesystems functions in own plugins

--- a/buteo.cfg
+++ b/buteo.cfg
@@ -1,8 +1,8 @@
 # Configuration file for Buteo
 
 # Enabled plugins
-# supplied default plugins: network vnstat 
-plugins = network
+# supplied default plugins: memory filesystems network vnstat 
+plugins = memory filesystems network
 
 # Authentication
 # List all users to grant authentication at auth_users and list
