--- a/buteo.cfg
+++ b/buteo.cfg
@@ -1,8 +1,8 @@
 # Configuration file for Buteo
 
 # Enabled plugins
-# supplied default plugins: memory filesystems network vnstat 
-plugins = memory filesystems network
+# supplied plugins: general system memory filesystems network vnstat 
+plugins = general system memory filesystems network
 
 # Authentication
 # List all users to grant authentication at auth_users and list
